--- a/index.html
+++ b/index.html
@@ -2,10 +2,124 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Rikuto's Portfolio</title>
-    <link href="css/style.css">
+    <title>陸TOのPHOTO</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
-    <h1>タイトルaaaaaa</h1>
+<body class="Portfolio">
+    <header class="Portfolio__header">
+        <nav class="Portfolio__header__menu__nav">
+            <ul class="Portfolio__header__menu__nav__list">
+                <li class="Portfolio__header__menu__nav__list__item">
+                    <a class="Portfolio__header__menu__nav__list__item__link" href="">TOP</a>
+                </li>
+                <li class="Portfolio__header__menu__nav__list__item">
+                    <a class="Portfolio__header__menu__nav__list__item__link" href="">ABOUT ME</a>
+                </li>
+                <li class="Portfolio__header__menu__nav__list__item">
+                    <a class="Portfolio__header__menu__nav__list__item__link" href="">PHOTOS</a>
+                </li>
+                <li class="Portfolio__header__menu__nav__list__item">
+                    <a class="Portfolio__header__menu__nav__list__item__link" href="">SNS</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <article class="portfolio__main">
+        <section class="portfolio__main__top">
+            <h1 class="portfolio__main__top__title section__title">陸TOのPHOTO</h1>
+            <div class="portfolio__main__top__content">
+
+            </div>
+
+        </section>
+        <section class="portfolio__main__about">
+            <h1 class="portfolio__main__about__title section__title">ABOUT</h1>
+            <div class="portfolio__main__about__content">
+                <p class="portfolio__main__about__content__sentence">
+                    どうも、陸人です。呼名はりっくんが主流ですが気に入ったもので呼んでください。使用している機材は
+                </p>
+                <ul class="portfolio__main__about__content__sentence__list">
+                    <li class="portfolio__main__about__content__sentence__list__item">MAIN:Z6(予定), 58mm/1.4</li>
+                    <li class="portfolio__main__about__content__sentence__list__item">SUB :X-T2, 56mm/1.2R, Utulens, オールドレンズ</li>
+                </ul>
+                <p>主に女の子のポートレート撮ってます…というかほとんどそれしか撮らないです。明るく、可愛いらしい写真が多いです。なのにサイトはカッコつけw
+                カメラで写真を撮るのが楽しくてやめられないですね。写真から撮り手を想像できるそんな写真を撮っていきたいです。</p>
+            </div>
+
+        </section>
+        <section class="portfolio__main__photos">
+            <h1 class="portfolio__main__photos__title section__title">PHOTOS</h1>
+            <div class="portfolio__main__photos__content">
+                <ul class="portfolio__main__photos__content__list">
+                    <li class="portfolio__main__photos__content__list__item">
+                        <p>RENA</p>
+                        <img src="" alt="RENA">
+                    </li>
+                    <li class="portfolio__main__photos__content__list__item">
+                        <p>KANON</p>
+                        <img src="" alt="KANON">
+                    </li>
+                    <li class="portfolio__main__photos__content__list__item">
+                        <p>AYANA</p>
+                        <img src="" alt="AYANA">
+                    </li>
+                    <li class="portfolio__main__photos__content__list__item">
+                        <p>MONE</p>
+                        <img src="" alt="MONE">
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+        <section class="portfolio__main__sns">
+            <h1 class="portfolio__main__sns__title section__title">SNS</h1>
+                <div class="portfolio__main__sns__title section__content">
+                    <table class="portfolio__main__sns__title section__content__table">
+                        <tr class="portfolio__main__sns__title section__content__table__row">
+                            <td class="portfolio__main__sns__title section__content__table__row__icon">
+                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Twitter">
+                            </td>
+                            <td class="portfolio__main__sns__title section__content__table__row__icon">
+                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Instagram">
+                            </td>
+                        </tr>
+                        <tr class="portfolio__main__sns__title section__content__table__row">
+                            <td class="portfolio__main__sns__title section__content__table__row__title">
+                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Twitter</p>
+                            </td>
+                            <td class="portfolio__main__sns__title section__content__table__row__title">
+                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Instagram</p>
+                            </td>
+                        </tr>
+                        <tr class="portfolio__main__sns__title section__content__table__row">
+                            <td class="portfolio__main__sns__title section__content__table__row__icon">
+                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Facebook">
+                            </td>
+                            <td class="portfolio__main__sns__title section__content__table__row__icon">
+                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Mail">
+                            </td>
+                        </tr>
+                        <tr class="portfolio__main__sns__title section__content__table__row">
+                            <td class="portfolio__main__sns__title section__content__table__row__title">
+                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Facebook</p>
+                            </td>
+                            <td class="portfolio__main__sns__title section__content__table__row__title">
+                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Mail</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
+        </section>
+
+    </article>
+    <footer class="portfolio__footer">
+        <ul>
+            <li></li>
+        </ul>
+
+    </footer>
+
+
 </body>
 </html>
