--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <title>陸TOのPHOTO</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
 </head>
-<body class="Portfolio">
-    <header class="Portfolio__header">
-        <nav class="Portfolio__header__menu__nav">
-            <ul class="Portfolio__header__menu__nav__list">
-                <li class="Portfolio__header__menu__nav__list__item">
-                    <a class="Portfolio__header__menu__nav__list__item__link" href="">TOP</a>
+<body class="portfolio">
+    <header class="portfolio__header">
+        <nav class="portfolio__header__nav">
+            <ul class="portfolio__header__nav__list">
+                <li class="portfolio__header__nav__list__item">
+                    <a class="portfolio__header__nav__list__item__link" href="">TOP</a>
                 </li>
-                <li class="Portfolio__header__menu__nav__list__item">
-                    <a class="Portfolio__header__menu__nav__list__item__link" href="">ABOUT ME</a>
+                <li class="portfolio__header__nav__list__item">
+                    <a class="portfolio__header__nav__list__item__link" href="">ABOUT ME</a>
                 </li>
-                <li class="Portfolio__header__menu__nav__list__item">
-                    <a class="Portfolio__header__menu__nav__list__item__link" href="">PHOTOS</a>
+                <li class="portfolio__header__nav__list__item">
+                    <a class="portfolio__header__nav__list__item__link" href="">PHOTOS</a>
                 </li>
-                <li class="Portfolio__header__menu__nav__list__item">
-                    <a class="Portfolio__header__menu__nav__list__item__link" href="">SNS</a>
+                <li class="portfolio__header__nav__list__item">
+                    <a class="portfolio__header__nav__list__item__link" href="">SNS</a>
                 </li>
             </ul>
         </nav>
