--- a/index.html
+++ b/index.html
@@ -1,133 +1,152 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
-    <meta charset="UTF-8">
-    <title>RIKKUN OF PHOTO</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>RIKKUN OF PHOTO</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
 </head>
-<body class="portfolio">
-    <header class="portfolio__header">
-        <nav class="portfolio__header__nav">
-            <ul class="portfolio__header__nav__list">
-                <li class="portfolio__header__nav__list__item">
-                    <a class="portfolio__header__nav__list__item__link" href="#TOP">TOP</a>
-                </li>
-                <li class="portfolio__header__nav__list__item">
-                    <a class="portfolio__header__nav__list__item__link" href="#ABOUT">ABOUT</a>
-                </li>
-                <li class="portfolio__header__nav__list__item">
-                    <a class="portfolio__header__nav__list__item__link" href="#PHOTOS">PHOTOS</a>
-                </li>
-                <li class="portfolio__header__nav__list__item">
-                    <a class="portfolio__header__nav__list__item__link" href="#SNS">SNS</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <article class="portfolio__main">
-        <section class="portfolio__main__top" id="TOP">
-                <h1 class="portfolio__main__top__title">
-                    <img class="portfolio__main__top__title__icon" src="image/icon-top.png" alt="top">
-                </h1>
 
-        </section>
-        <section class="portfolio__main__about" id="ABOUT">
-            <h2 class="portfolio__main__about__title section__title">
-                <img class="section__title__img" src="image/title-about.png" alt="about">
-            </h2>
-            <div class="portfolio__main__about__content">
-                <p class="portfolio__main__about__content__sentence">
-                    どうも、陸人です。呼名はりっくんが主流ですが気に入ったもので呼んでください。<br><br>
-                    主に女の子のポートレート撮っています。明るく、可愛いらしい写真が多いです。
-                    <br>カメラで写真を撮るのは楽しくてやめられないですね。写真から撮り手を想像できるそんな写真を撮っていきたいです。<br><br>使用している機材は
-                </p>
-                <ul class="portfolio__main__about__content__list">
-                    <li class="portfolio__main__about__content__list__item">MAIN:Z6(予定), 58mm/1.4</li>
-                    <li class="portfolio__main__about__content__list__item">SUB :X-T2, 56mm/1.2R, Utulens, オールドレンズ</li>
-                </ul>
-                <p class="portfolio__main__about__content__sentence"></p>
+<body class="portfolio" id="TOP">
+  <header class="portfolio__header">
+    <nav class="portfolio__header__nav">
+      <ul class="portfolio__header__nav__list">
+        <li class="portfolio__header__nav__list__item">
+          <a class="portfolio__header__nav__list__item__link" href="#TOP">TOP</a>
+        </li>
+        <li class="portfolio__header__nav__list__item">
+          <a class="portfolio__header__nav__list__item__link" href="#ABOUT">ABOUT</a>
+        </li>
+        <li class="portfolio__header__nav__list__item">
+          <a class="portfolio__header__nav__list__item__link" href="#PHOTOS">PHOTOS</a>
+        </li>
+        <li class="portfolio__header__nav__list__item">
+          <a class="portfolio__header__nav__list__item__link" href="#SNS">SNS</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <article class="portfolio__side">
+    <a class="portfolio__header__nav__list__item__link" href="#TOP">
+      <img class="portfolio__side__title" src="image/title-side.png" alt="RIKKUN OF PHOTO">
+    </a>
+  </article>
+  <article class="portfolio__main">
+    <section class="portfolio__main__top">
+      <h1 class="portfolio__main__top__title">
+        <img class="portfolio__main__top__title__icon" src="image/icon-top.png" alt="top">
+      </h1>
+
+    </section>
+    <section class="portfolio__main__about" id="ABOUT">
+      <h2 class="portfolio__main__about__title section__title">
+        <img class="section__title__img" src="image/title-about.png" alt="about">
+      </h2>
+      <div class="portfolio__main__about__content">
+        <p class="portfolio__main__about__content__sentence">
+          <span>素敵なあなたを素敵なままに撮ってもいいですか?</span><br><br>
+          　主に女の子のポートレート撮っています。明るく、可愛いらしい写真が多いです。素敵なところって人によって違うのがポートレートの醍醐味ですよね。 表情だって素敵なポイントの一つだと思います。特に笑顔w<br>
+          <br>　何はともあれカメラで写真を撮るのは楽しくてやめられないですね。写真から撮り手を想像できるそんな写真を撮っていきたいです。<br>
+          <br><span>もしよければあなたも写ってください。</span>
+        </p>
+      </div>
+
+    </section>
+    <section class="portfolio__main__photos" id="PHOTOS">
+      <h2 class="portfolio__main__photos__title section__title">
+        <img class="section__title__img" src="image/title-photos.png" alt="photos">
+      </h2>
+      <div class="portfolio__main__photos__content">
+        <ul class="portfolio__main__photos__content__list">
+          <li class="portfolio__main__photos__content__list__item">
+            <img class="portfolio__main__photos__content__list__item__img" src="photo/rena/00.jpg" alt="RENA">
+            <div class="portfolio__main__photos__content__list__item__mask">
+              <h3 class="portfolio__main__photos__content__list__item__mask__sentence">Rena</h3>
             </div>
-
-        </section>
-        <section class="portfolio__main__photos" id="PHOTOS">
-            <h2 class="portfolio__main__photos__title section__title">
-                <img class="section__title__img" src="image/title-photos.png" alt="photos">
-            </h2>
-            <div class="portfolio__main__photos__content">
-                <ul class="portfolio__main__photos__content__list">
-                    <li class="portfolio__main__photos__content__list__item">
-                        <p>RENA</p>
-                        <img src="" alt="RENA">
-                    </li>
-                    <li class="portfolio__main__photos__content__list__item">
-                        <p>KANON</p>
-                        <img src="" alt="KANON">
-                    </li>
-                    <li class="portfolio__main__photos__content__list__item">
-                        <p>AYANA</p>
-                        <img src="" alt="AYANA">
-                    </li>
-                    <li class="portfolio__main__photos__content__list__item">
-                        <p>MONE</p>
-                        <img src="" alt="MONE">
-                    </li>
-                </ul>
+          </li>
+          <li class="portfolio__main__photos__content__list__item">
+            <img class="portfolio__main__photos__content__list__item__img" src="photo/kanon/00.jpg" alt="KANON">
+            <div class="portfolio__main__photos__content__list__item__mask">
+              <h3 class="portfolio__main__photos__content__list__item__mask__sentence">Kanon</h3>
             </div>
-
-        </section>
-        <section class="portfolio__main__sns" id="SNS">
-            <h2 class="portfolio__main__sns__title section__title">
-                <img class="section__title__img" src="image/title-sns.png" alt="sns">
-            </h2>
-                <div class="portfolio__main__sns__content">
-                    <table class="portfolio__main__sns__title section__content__table">
-                        <tr class="portfolio__main__sns__title section__content__table__row">
-                            <td class="portfolio__main__sns__title section__content__table__row__icon">
-                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Twitter">
-                            </td>
-                            <td class="portfolio__main__sns__title section__content__table__row__icon">
-                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Instagram">
-                            </td>
-                        </tr>
-                        <tr class="portfolio__main__sns__title section__content__table__row">
-                            <td class="portfolio__main__sns__title section__content__table__row__title">
-                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Twitter</p>
-                            </td>
-                            <td class="portfolio__main__sns__title section__content__table__row__title">
-                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Instagram</p>
-                            </td>
-                        </tr>
-                        <tr class="portfolio__main__sns__title section__content__table__row">
-                            <td class="portfolio__main__sns__title section__content__table__row__icon">
-                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Facebook">
-                            </td>
-                            <td class="portfolio__main__sns__title section__content__table__row__icon">
-                                <img class="portfolio__main__sns__title section__content__table__row__icon" src="" alt="Mail">
-                            </td>
-                        </tr>
-                        <tr class="portfolio__main__sns__title section__content__table__row">
-                            <td class="portfolio__main__sns__title section__content__table__row__title">
-                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Facebook</p>
-                            </td>
-                            <td class="portfolio__main__sns__title section__content__table__row__title">
-                                <p class="portfolio__main__sns__title section__content__table__row__title__sentence">Mail</p>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-
-        </section>
-
-    </article>
-    <footer class="portfolio__footer">
-        <ul>
-            <li></li>
+          </li>
+          <li class="portfolio__main__photos__content__list__item">
+            <img class="portfolio__main__photos__content__list__item__img" src="photo/saki/00.jpg" alt="SAKI">
+            <div class="portfolio__main__photos__content__list__item__mask">
+              <h3 class="portfolio__main__photos__content__list__item__mask__sentence">Saki</h3>
+            </div>
+          </li>
+          <li class="portfolio__main__photos__content__list__item">
+            <img class="portfolio__main__photos__content__list__item__img" src="photo/mone/00.jpg" alt="MONE">
+            <div class="portfolio__main__photos__content__list__item__mask">
+              <h3 class="portfolio__main__photos__content__list__item__mask__sentence">Mone</h3>
+            </div>
+          </li>
+          <li class="portfolio__main__photos__content__list__item">
+            <img class="portfolio__main__photos__content__list__item__img" src="photo/ayana/00.jpg" alt="AYANA">
+            <div class="portfolio__main__photos__content__list__item__mask">
+              <h3 class="portfolio__main__photos__content__list__item__mask__sentence">Ayana</h3>
+            </div>
+          </li>
+          <li class="portfolio__main__photos__content__list__item">
+            <img class="portfolio__main__photos__content__list__item__img" src="photo/asuka/00.jpg" alt="ASUKA">
+            <div class="portfolio__main__photos__content__list__item__mask">
+              <h3 class="portfolio__main__photos__content__list__item__mask__sentence">Asuka</h3>
+            </div>
+          </li>
         </ul>
+      </div>
 
-    </footer>
+    </section>
+    <section class="portfolio__main__sns" id="SNS">
+      <h2 class="portfolio__main__sns__title section__title">
+        <img class="section__title__img" src="image/title-sns.png" alt="sns">
+      </h2>
+      <div class="portfolio__main__sns__content">
+        <ul class="portfolio__main__sns__content__list">
+          <li class="portfolio__main__sns__content__list__item">
+            <a class="portfolio__main__sns__content__list__item__link" href="https://twitter.com/LIKUTON_">
+              <img class="portfolio__main__sns__content__list__item__link__icon" src="image/icon-twitter.PNG" alt="Twitter">
+              <h3 class="portfolio__main__sns__content__list__item__link__title">
+                ID : LIKUTON_<br>
+                NAME : Rikkun
+              </h3>
+            </a>
+          </li>
+          <li class="portfolio__main__sns__content__list__item">
+            <a class="portfolio__main__sns__content__list__item__link" href="https://www.instagram.com/3rikkun18/?hl=ja">
+              <img class="portfolio__main__sns__content__list__item__link__icon" src="image/icon-instagram.PNG" alt="Instagram">
+              <h3 class="portfolio__main__sns__content__list__item__link__title">
+                ID : 3rikkun18<br>
+                NAME : RIKKUN
+              </h3>
+            </a>
+          </li>
+          <li class="portfolio__main__sns__content__list__item">
+            <a class="portfolio__main__sns__content__list__item__link" href="https://www.facebook.com/people/%E7%9F%B3%E5%80%89%E9%99%B8%E4%BA%BA/100009910088622">
+              <img class="portfolio__main__sns__content__list__item__link__icon" src="image/icon-facebook.PNG" alt="Facebook">
+              <h3 class="portfolio__main__sns__content__list__item__link__title">
+                NAME : 石倉陸人
+              </h3>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+    </section>
+
+  </article>
+  <footer class="portfolio__footer">
+    <ul>
+      <li></li>
+    </ul>
+
+  </footer>
 
 
+  <script src="main.js"></script>
 </body>
+
 </html>
